--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,11 @@ buildscript {
         maven { url 'https://dl.bintray.com/content/aalmiray/kordamp' }
     }
     dependencies {
-        classpath 'org.kordamp:markdown-gradle-plugin:1.0.0'
 		classpath 'org.kordamp.gradle:clirr-gradle-plugin:0.2.2'
 		classpath "org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.3.1"
 		classpath 'net.ltgt.gradle:gradle-errorprone-plugin:0.0.10'
     }
 }
-apply plugin: 'org.kordamp.gradle.markdown'
 
 apply from: 'version.gradle'
 
@@ -27,7 +25,7 @@ allprojects {
 	ext {
 		gitCommit = getGitCommit()
 		javadocAllDir = new File(buildDir, 'javadoc')
-		documentationDir = new File(buildDir, 'documentation')
+		documentationDir = new File(projectDir, 'documentation')
 		releasedocsDir = new File(buildDir, 'releasedocs')
 		rootConfigDir = new File(rootDir, 'config')
 		sonatypeCredentialsAvailable = project.hasProperty('sonatypeUsername') && project.hasProperty('sonatypePassword')
@@ -235,13 +233,7 @@ task prepareReleasedocs(type: Copy) {
 	filter(ReplaceTokens, tokens: [version: version, releasedate: builtDate, targetCompatibility: targetCompatibility.toString()])
 }
 
-markdownToHtml {
-	sourceDir = new File(projectDir, "/documentation")
-	outputDir documentationDir
-	configuration = [tables: true, fencedCodeBlocks: true]
-}
-
-task distributionZip(type: Zip, dependsOn: [javadocAll, prepareReleasedocs, markdownToHtml]) {
+task distributionZip(type: Zip, dependsOn: [javadocAll, prepareReleasedocs]) {
 	classifier builtDate
 	into ('javadoc') {
 		from(javadocAllDir)
